--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <section class="intro section">
     <div class="container">
       <h1 class="intro__title">Эффективные решения для вашего бизнеса</h1>
-      <button class="button intro__button" type="button">Заказать услугу</button>
+      <button class="button intro__button" type="button" data-modal-open>Заказать услугу</button>
     </div>
   </section>
 
@@ -93,16 +93,19 @@
     <div class="container">
       <h2 class="services__title">Чем мы занимаемся</h2>
       <ul class="services__list">
-        <li tabindex="0">
+        <li class="item-services" tabindex="0">
+          <h3 class="item-services__title">Десктопные приложения</h3>
           <img class="services__img" width="370" src="images/services/img.jpg" title="Десктопная разработка"
                alt="Специалист печатает код на клавиатуре в уютной обстановке">
         </li>
-        <li tabindex="0">
+        <li class="item-services" tabindex="0">
+          <h3 class="item-services__title">Мобильные приложения</h3>
           <img class="services__img" width="370" src="images/services/img_2.jpg"
                title="Разработка под мобильные платформы"
                alt="Специалист исследует адаптивность сайта на мобильном устройстве">
         </li>
-        <li tabindex="0">
+        <li class="item-services" tabindex="0">
+          <h3 class="item-services__title">Дизайнерские решения</h3>
           <img class="services__img" width="370" src="images/services/img_3.jpg" title="Дизайн любой сложности"
                alt="Скрупулезный выбор цвета для конкретных ситуаций">
         </li>
@@ -288,5 +291,15 @@
     </div>
   </div>
 </footer>
+
+<div class="popup is-hidden" data-modal>
+  <div class="popup__body">
+    <button class="popup__close" data-modal-close aria-label="Закрыть окно" aria-expanded="true">
+      <svg width="18" height="18"><use xlink:href="images/icons-min.svg#close"></use></svg>
+    </button>
+  </div>
+</div>
+
+<script src="./js/modal.js"></script>
 </body>
 </html>
