--- a/index.html
+++ b/index.html
@@ -26,11 +26,15 @@
     </nav>
     <ul class="contacts">
       <li><a class="contacts__link contacts__link--email" href="mailto:info@devstudio.com">
-        <svg width="16" height="12"><use xlink:href="images/icons-min.svg#email"></use></svg>
+        <svg width="16" height="12">
+          <use xlink:href="images/icons-min.svg#email"></use>
+        </svg>
         info@devstudio.com
       </a></li>
       <li><a class="contacts__link contacts__link--phone" href="tel:+380961111111">
-        <svg width="10" height="16"><use xlink:href="images/icons-min.svg#phone"></use></svg>
+        <svg width="10" height="16">
+          <use xlink:href="images/icons-min.svg#phone"></use>
+        </svg>
         +38 096 111 11 11
       </a></li>
     </ul>
@@ -49,36 +53,44 @@
     <div class="container">
       <h2 class="visually-hidden">Преимущества</h2>
       <ul class="advantages__list">
-        <li class="advantages__item item-advantages" tabindex="0">
+        <li class="advantages__item item-advantages">
           <div class="advantages__img">
-            <svg width="70" height="70"><use xlink:href="images/icons-min.svg#antenna"></use></svg>
+            <svg width="70" height="70">
+              <use xlink:href="images/icons-min.svg#antenna"></use>
+            </svg>
           </div>
           <h3 class="advantages__title">Внимание к деталям</h3>
           <p class="advantages__description">
             Идейные соображения, а также начало повседневной работы по формированию позиции.
           </p>
         </li>
-        <li class="advantages__item item-advantages" tabindex="0">
+        <li class="advantages__item item-advantages">
           <div class="advantages__img">
-            <svg width="70" height="70"><use xlink:href="images/icons-min.svg#clock"></use></svg>
+            <svg width="70" height="70">
+              <use xlink:href="images/icons-min.svg#clock"></use>
+            </svg>
           </div>
           <h3 class="advantages__title">Пунктуальность</h3>
           <p class="advantages__description">
             Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
           </p>
         </li>
-        <li class="advantages__item item-advantages" tabindex="0">
+        <li class="advantages__item item-advantages">
           <div class="advantages__img">
-            <svg width="70" height="70"><use xlink:href="images/icons-min.svg#diagram"></use></svg>
+            <svg width="70" height="70">
+              <use xlink:href="images/icons-min.svg#diagram"></use>
+            </svg>
           </div>
           <h3 class="advantages__title">Планирование</h3>
           <p class="advantages__description">
             Равным образом консультация с широким активом в значительной степени обуславливает.
           </p>
         </li>
-        <li class="advantages__item item-advantages" tabindex="0">
+        <li class="advantages__item item-advantages">
           <div class="advantages__img">
-            <svg width="70" height="70"><use xlink:href="images/icons-min.svg#astronaut"></use></svg>
+            <svg width="70" height="70">
+              <use xlink:href="images/icons-min.svg#astronaut"></use>
+            </svg>
           </div>
           <h3 class="advantages__title">Современные технологии</h3>
           <p class="advantages__description">
@@ -93,20 +105,26 @@
     <div class="container">
       <h2 class="services__title">Чем мы занимаемся</h2>
       <ul class="services__list">
-        <li class="item-services" tabindex="0">
-          <h3 class="item-services__title">Десктопные приложения</h3>
-          <img class="services__img" width="370" src="images/services/img.jpg" title="Десктопная разработка"
+        <li class="services__item item-services">
+          <div class="item-services__wrapper">
+            <h3 class="item-services__title">Десктопные приложения</h3>
+          </div>
+          <img class="item-services__img" width="370" src="images/services/img.jpg" title="Десктопная разработка"
                alt="Специалист печатает код на клавиатуре в уютной обстановке">
         </li>
-        <li class="item-services" tabindex="0">
-          <h3 class="item-services__title">Мобильные приложения</h3>
-          <img class="services__img" width="370" src="images/services/img_2.jpg"
+        <li class="services__item item-services">
+          <div class="item-services__wrapper">
+            <h3 class="item-services__title">Мобильные приложения</h3>
+          </div>
+          <img class="item-services__img" width="370" src="images/services/img_2.jpg"
                title="Разработка под мобильные платформы"
                alt="Специалист исследует адаптивность сайта на мобильном устройстве">
         </li>
-        <li class="item-services" tabindex="0">
-          <h3 class="item-services__title">Дизайнерские решения</h3>
-          <img class="services__img" width="370" src="images/services/img_3.jpg" title="Дизайн любой сложности"
+        <li class="services__item item-services">
+          <div class="item-services__wrapper">
+            <h3 class="item-services__title">Дизайнерские решения</h3>
+          </div>
+          <img class="item-services__img" width="370" src="images/services/img_3.jpg" title="Дизайн любой сложности"
                alt="Скрупулезный выбор цвета для конкретных ситуаций">
         </li>
       </ul>
@@ -117,7 +135,7 @@
     <div class="container">
       <h2 class="services__title">Наша команда</h2>
       <ul class="team__list">
-        <li class="team__item card" tabindex="0">
+        <li class="team__item card">
           <img class="card__img" width="270" src="images/team/product_designer.jpg" title="Игорь Демьяненко"
                alt="Продуктовый дизайнер">
           <div class="card__wrapper">
@@ -126,24 +144,32 @@
             <ul class="social__list">
               <li><a class="social__link" href="https://instagram.com/" aria-label="instagram"
                      rel="nofollow noopener noreferrer" target="_blank">
-                <svg width="20" height="20"><use xlink:href="images/icons-min.svg#instagram"></use></svg>
+                <svg width="20" height="20">
+                  <use xlink:href="images/icons-min.svg#instagram"></use>
+                </svg>
               </a></li>
               <li><a class="social__link" href="https://twitter.com/" aria-label="twitter"
                      rel="nofollow noopener noreferrer" target="_blank">
-                <svg width="20" height="20"><use xlink:href="images/icons-min.svg#twitter"></use></svg>
+                <svg width="20" height="20">
+                  <use xlink:href="images/icons-min.svg#twitter"></use>
+                </svg>
               </a></li>
               <li><a class="social__link" href="https://facebook.com/" aria-label="facebook"
                      rel="nofollow noopener noreferrer" target="_blank">
-                <svg width="20" height="20"><use xlink:href="images/icons-min.svg#facebook"></use></svg>
+                <svg width="20" height="20">
+                  <use xlink:href="images/icons-min.svg#facebook"></use>
+                </svg>
               </a></li>
               <li><a class="social__link" href="https://linkedin.com/" aria-label="linkedin"
                      rel="nofollow noopener noreferrer" target="_blank">
-                <svg width="20" height="20"><use xlink:href="images/icons-min.svg#linkedin"></use></svg>
+                <svg width="20" height="20">
+                  <use xlink:href="images/icons-min.svg#linkedin"></use>
+                </svg>
               </a></li>
             </ul>
           </div>
         </li>
-        <li class="team__item card" tabindex="0">
+        <li class="team__item card">
           <img class="card__img" width="270" src="images/team/frontend_developer.jpg" title="Ольга Репина"
                alt="Фронтэнд разработчик">
           <div class="card__wrapper">
@@ -152,24 +178,32 @@
             <ul class="social__list">
               <li><a class="social__link" href="https://instagram.com/" aria-label="instagram"
                      rel="nofollow noopener noreferrer" target="_blank">
-                <svg width="20" height="20"><use xlink:href="images/icons-min.svg#instagram"></use></svg>
+                <svg width="20" height="20">
+                  <use xlink:href="images/icons-min.svg#instagram"></use>
+                </svg>
               </a></li>
               <li><a class="social__link" href="https://twitter.com/" aria-label="twitter"
                      rel="nofollow noopener noreferrer" target="_blank">
-                <svg width="20" height="20"><use xlink:href="images/icons-min.svg#twitter"></use></svg>
+                <svg width="20" height="20">
+                  <use xlink:href="images/icons-min.svg#twitter"></use>
+                </svg>
               </a></li>
               <li><a class="social__link" href="https://facebook.com/" aria-label="facebook"
                      rel="nofollow noopener noreferrer" target="_blank">
-                <svg width="20" height="20"><use xlink:href="images/icons-min.svg#facebook"></use></svg>
+                <svg width="20" height="20">
+                  <use xlink:href="images/icons-min.svg#facebook"></use>
+                </svg>
               </a></li>
               <li><a class="social__link" href="https://linkedin.com/" aria-label="linkedin"
                      rel="nofollow noopener noreferrer" target="_blank">
-                <svg width="20" height="20"><use xlink:href="images/icons-min.svg#linkedin"></use></svg>
+                <svg width="20" height="20">
+                  <use xlink:href="images/icons-min.svg#linkedin"></use>
+                </svg>
               </a></li>
             </ul>
           </div>
         </li>
-        <li class="team__item card" tabindex="0">
+        <li class="team__item card">
           <img class="card__img" width="270" src="images/team/marketing.jpg" title="Николай Тарасов" alt="Маркетолог">
           <div class="card__wrapper">
             <h3 class="card__title">Николай Тарасов</h3>
@@ -177,24 +211,32 @@
             <ul class="social__list">
               <li><a class="social__link" href="https://instagram.com/" aria-label="instagram"
                      rel="nofollow noopener noreferrer" target="_blank">
-                <svg width="20" height="20"><use xlink:href="images/icons-min.svg#instagram"></use></svg>
+                <svg width="20" height="20">
+                  <use xlink:href="images/icons-min.svg#instagram"></use>
+                </svg>
               </a></li>
               <li><a class="social__link" href="https://twitter.com/" aria-label="twitter"
                      rel="nofollow noopener noreferrer" target="_blank">
-                <svg width="20" height="20"><use xlink:href="images/icons-min.svg#twitter"></use></svg>
+                <svg width="20" height="20">
+                  <use xlink:href="images/icons-min.svg#twitter"></use>
+                </svg>
               </a></li>
               <li><a class="social__link" href="https://facebook.com/" aria-label="facebook"
                      rel="nofollow noopener noreferrer" target="_blank">
-                <svg width="20" height="20"><use xlink:href="images/icons-min.svg#facebook"></use></svg>
+                <svg width="20" height="20">
+                  <use xlink:href="images/icons-min.svg#facebook"></use>
+                </svg>
               </a></li>
               <li><a class="social__link" href="https://linkedin.com/" aria-label="linkedin"
                      rel="nofollow noopener noreferrer" target="_blank">
-                <svg width="20" height="20"><use xlink:href="images/icons-min.svg#linkedin"></use></svg>
+                <svg width="20" height="20">
+                  <use xlink:href="images/icons-min.svg#linkedin"></use>
+                </svg>
               </a></li>
             </ul>
           </div>
         </li>
-        <li class="team__item card" tabindex="0">
+        <li class="team__item card">
           <img class="card__img" width="270" src="images/team/ui_designer.jpg" title="Михаил Ермаков"
                alt="Дизайнер интерфейсов">
           <div class="card__wrapper">
@@ -203,19 +245,27 @@
             <ul class="social__list">
               <li><a class="social__link" href="https://instagram.com/" aria-label="instagram"
                      rel="nofollow noopener noreferrer" target="_blank">
-                <svg width="20" height="20"><use xlink:href="images/icons-min.svg#instagram"></use></svg>
+                <svg width="20" height="20">
+                  <use xlink:href="images/icons-min.svg#instagram"></use>
+                </svg>
               </a></li>
               <li><a class="social__link" href="https://twitter.com/" aria-label="twitter"
                      rel="nofollow noopener noreferrer" target="_blank">
-                <svg width="20" height="20"><use xlink:href="images/icons-min.svg#twitter"></use></svg>
+                <svg width="20" height="20">
+                  <use xlink:href="images/icons-min.svg#twitter"></use>
+                </svg>
               </a></li>
               <li><a class="social__link" href="https://facebook.com/" aria-label="facebook"
                      rel="nofollow noopener noreferrer" target="_blank">
-                <svg width="20" height="20"><use xlink:href="images/icons-min.svg#facebook"></use></svg>
+                <svg width="20" height="20">
+                  <use xlink:href="images/icons-min.svg#facebook"></use>
+                </svg>
               </a></li>
               <li><a class="social__link" href="https://linkedin.com/" aria-label="linkedin"
                      rel="nofollow noopener noreferrer" target="_blank">
-                <svg width="20" height="20"><use xlink:href="images/icons-min.svg#linkedin"></use></svg>
+                <svg width="20" height="20">
+                  <use xlink:href="images/icons-min.svg#linkedin"></use>
+                </svg>
               </a></li>
             </ul>
           </div>
@@ -229,24 +279,36 @@
       <h2 class="services__title">Постоянные клиенты</h2>
       <ul class="clients__list">
         <li><a class="clients__link" href="#" target="_blank" rel="nofollow noreferrer noopener" aria-label="YA & CO">
-          <svg width="106" height="60"><use xlink:href="images/icons-min.svg#yaco"></use></svg>
+          <svg width="106" height="60">
+            <use xlink:href="images/icons-min.svg#yaco"></use>
+          </svg>
         </a></li>
         <li><a class="clients__link" href="#" target="_blank" rel="nofollow noreferrer noopener"
                aria-label="tagline here">
-          <svg width="106" height="60"><use xlink:href="images/icons-min.svg#tagline"></use></svg>
+          <svg width="106" height="60">
+            <use xlink:href="images/icons-min.svg#tagline"></use>
+          </svg>
         </a></li>
         <li><a class="clients__link" href="#" target="_blank" rel="nofollow noreferrer noopener" aria-label="company">
-          <svg width="106" height="60"><use xlink:href="images/icons-min.svg#company"></use></svg>
+          <svg width="106" height="60">
+            <use xlink:href="images/icons-min.svg#company"></use>
+          </svg>
         </a></li>
         <li><a class="clients__link" href="#" target="_blank" rel="nofollow noreferrer noopener"
                aria-label="forester peters">
-          <svg width="106" height="60"><use xlink:href="images/icons-min.svg#forester"></use></svg>
+          <svg width="106" height="60">
+            <use xlink:href="images/icons-min.svg#forester"></use>
+          </svg>
         </a></li>
         <li><a class="clients__link" href="#" target="_blank" rel="nofollow noreferrer noopener" aria-label="brand">
-          <svg width="106" height="60"><use xlink:href="images/icons-min.svg#brand"></use></svg>
+          <svg width="106" height="60">
+            <use xlink:href="images/icons-min.svg#brand"></use>
+          </svg>
         </a></li>
         <li><a class="clients__link" href="#" target="_blank" rel="nofollow noreferrer noopener" aria-label="company">
-          <svg width="106" height="60"><use xlink:href="images/icons-min.svg#tag"></use></svg>
+          <svg width="106" height="60">
+            <use xlink:href="images/icons-min.svg#tag"></use>
+          </svg>
         </a></li>
       </ul>
     </div>
@@ -256,14 +318,16 @@
 <footer class="footer">
   <div class="container">
     <div class="footer__column">
-      <a class="logo footer__logo" href="/" title="на главную страницу - WebStudio"><span class="logo__prefix">Web</span>Studio</a>
+      <a class="logo footer__logo" href="/" title="на главную страницу - WebStudio"><span
+        class="logo__prefix">Web</span>Studio</a>
       <address class="address">
         <ul class="address__list">
           <li><a class="address__main"
                  href="https://www.google.com.ua/maps/ms?msid=218324961284362248250.0004ea06cd32ef222b213&msa=0"
                  target="_blank" rel="noopener noreferrer nofollow">г. Киев, пр-т Леси Украинки, 26</a>
           </li>
-          <li><a class="contacts__link contacts__link--email" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a class="contacts__link contacts__link--email" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
           <li><a class="contacts__link contacts__link--phone" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
       </address>
@@ -273,19 +337,27 @@
       <ul class="social__list">
         <li><a class="social__link" href="https://instagram.com/" aria-label="instagram"
                rel="nofollow noopener noreferrer" target="_blank">
-          <svg width="20" height="20"><use xlink:href="images/icons-min.svg#instagram"></use></svg>
+          <svg width="20" height="20">
+            <use xlink:href="images/icons-min.svg#instagram"></use>
+          </svg>
         </a></li>
         <li><a class="social__link" href="https://twitter.com/" aria-label="twitter"
                rel="nofollow noopener noreferrer" target="_blank">
-          <svg width="20" height="20"><use xlink:href="images/icons-min.svg#twitter"></use></svg>
+          <svg width="20" height="20">
+            <use xlink:href="images/icons-min.svg#twitter"></use>
+          </svg>
         </a></li>
         <li><a class="social__link" href="https://facebook.com/" aria-label="facebook"
                rel="nofollow noopener noreferrer" target="_blank">
-          <svg width="20" height="20"><use xlink:href="images/icons-min.svg#facebook"></use></svg>
+          <svg width="20" height="20">
+            <use xlink:href="images/icons-min.svg#facebook"></use>
+          </svg>
         </a></li>
         <li><a class="social__link" href="https://linkedin.com/" aria-label="linkedin"
                rel="nofollow noopener noreferrer" target="_blank">
-          <svg width="20" height="20"><use xlink:href="images/icons-min.svg#linkedin"></use></svg>
+          <svg width="20" height="20">
+            <use xlink:href="images/icons-min.svg#linkedin"></use>
+          </svg>
         </a></li>
       </ul>
     </div>
@@ -295,7 +367,9 @@
 <div class="popup is-hidden" data-modal>
   <div class="popup__body">
     <button class="popup__close" data-modal-close aria-label="Закрыть окно" aria-expanded="true">
-      <svg width="18" height="18"><use xlink:href="images/icons-min.svg#close"></use></svg>
+      <svg width="18" height="18">
+        <use xlink:href="images/icons-min.svg#close"></use>
+      </svg>
     </button>
   </div>
 </div>
