--- a/portfolio.html
+++ b/portfolio.html
@@ -69,7 +69,10 @@
           <a class="card" href="#" target="_blank" rel="nofollow noreferrer noopener">
             <img class="card__img" width="370" src="images/portfolio/tehno.jpg"
                  alt="Страница сайта с сотрудниками компании">
-            <p class="card__description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+            <div class="card__description">
+              <p class="card__text">Технокряк это современная площадка распространения коронавируса. Компании используют
+                эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+            </div>
             <div class="card__wrapper">
               <h3 class="card__title">Технокряк</h3>
               <p class="card__subtitle">Веб-сайт</p>
@@ -80,7 +83,10 @@
           <a class="card" href="#" target="_blank" rel="nofollow noreferrer noopener">
             <img class="card__img" width="370" src="images/portfolio/orlean.jpg"
                  alt="Два парня играют в баскетбол">
-            <p class="card__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A assumenda consectetur corporis esse est excepturi, nemo quis rerum temporibus voluptatem.</p>
+            <div class="card__description">
+              <p class="card__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A assumenda consectetur
+                corporis esse est excepturi, nemo quis rerum temporibus voluptatem.</p>
+            </div>
             <div class="card__wrapper">
               <h3 class="card__title">Постер New Orlean vs Golden Star</h3>
               <p class="card__subtitle">Дизайн</p>
@@ -91,7 +97,10 @@
           <a class="card" href="#" target="_blank" rel="nofollow noreferrer noopener">
             <img class="card__img" width="370" src="images/portfolio/seafood.jpg"
                  alt="Название компании на фоне рыбы">
-            <p class="card__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam consequatur error iste nam, nostrum officiis omnis pariatur quas tempore totam vel.</p>
+            <div class="card__description">
+              <p class="card__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam consequatur error
+                iste nam, nostrum officiis omnis pariatur quas tempore totam vel.</p>
+            </div>
             <div class="card__wrapper">
               <h3 class="card__title">Ресторан Seafood</h3>
               <p class="card__subtitle">Приложение</p>
@@ -102,7 +111,10 @@
           <a class="card" href="#" target="_blank" rel="nofollow noreferrer noopener">
             <img class="card__img" width="370" src="images/portfolio/prime.jpg"
                  alt="Большие наушники">
-            <p class="card__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus harum impedit ipsa nihil provident similique sit ullam velit, voluptas?</p>
+            <div class="card__description">
+              <p class="card__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus harum impedit ipsa
+                nihil provident similique sit ullam velit, voluptas?</p>
+            </div>
             <div class="card__wrapper">
               <h3 class="card__title">Проект Prime</h3>
               <p class="card__subtitle">Маркетинг</p>
@@ -113,7 +125,10 @@
           <a class="card" href="#" target="_blank" rel="nofollow noreferrer noopener">
             <img class="card__img" width="370" src="images/portfolio/boxes.jpg"
                  alt="Две крафтовые коробочки">
-            <p class="card__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda consequuntur cum cupiditate dolores, explicabo id magnam magni non, perferendis perspiciatis quibusdam, voluptas!</p>
+            <div class="card__description">
+              <p class="card__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda consequuntur cum
+                cupiditate dolores, explicabo id magnam magni non, perferendis perspiciatis quibusdam, voluptas!</p>
+            </div>
             <div class="card__wrapper">
               <h3 class="card__title">Проект Boxes</h3>
               <p class="card__subtitle">Приложение</p>
@@ -124,7 +139,10 @@
           <a class="card" href="#" target="_blank" rel="nofollow noreferrer noopener">
             <img class="card__img" width="370" src="images/portfolio/inspirations.jpg"
                  alt="На мониторе открыта страница сайта">
-            <p class="card__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut commodi culpa cum natus quaerat quibusdam soluta!</p>
+            <div class="card__description">
+              <p class="card__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut commodi culpa cum
+                natus quaerat quibusdam soluta!</p>
+            </div>
             <div class="card__wrapper">
               <h3 class="card__title">Inspiration has no Borders</h3>
               <p class="card__subtitle">Веб-сайт</p>
@@ -135,7 +153,10 @@
           <a class="card" href="#" target="_blank" rel="nofollow noreferrer noopener">
             <img class="card__img" width="370" src="images/portfolio/limited.jpg"
                  alt="Книга в развернутом виде, с картинками">
-            <p class="card__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid dolore qui temporibus vitae. Dolor.</p>
+            <div class="card__description">
+              <p class="card__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid dolore qui
+                temporibus vitae. Dolor.</p>
+            </div>
             <div class="card__wrapper">
               <h3 class="card__title">Издание Limited Edition</h3>
               <p class="card__subtitle">Дизайн</p>
@@ -146,7 +167,11 @@
           <a class="card" href="#" target="_blank" rel="nofollow noreferrer noopener">
             <img class="card__img" width="370" src="images/portfolio/lab.jpg"
                  alt="Ярлык компании - Labeltag">
-            <p class="card__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci animi aspernatur beatae cumque, explicabo iure laudantium molestiae odit quibusdam temporibus. Distinctio error eum voluptate?</p>
+            <div class="card__description">
+              <p class="card__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci animi aspernatur
+                beatae cumque, explicabo iure laudantium molestiae odit quibusdam temporibus. Distinctio error eum
+                voluptate?</p>
+            </div>
             <div class="card__wrapper">
               <h3 class="card__title">Проект LAB</h3>
               <p class="card__subtitle">Маркетинг</p>
@@ -157,7 +182,10 @@
           <a class="card" href="#" target="_blank" rel="nofollow noreferrer noopener">
             <img class="card__img" width="370" src="images/portfolio/growing.jpg"
                  alt="На ноутбуке открыто приложение">
-            <p class="card__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti dicta dolorum eum laboriosam, provident ratione tempore vel voluptas? Aliquam?</p>
+            <div class="card__description">
+              <p class="card__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti dicta dolorum eum
+                laboriosam, provident ratione tempore vel voluptas? Aliquam?</p>
+            </div>
             <div class="card__wrapper">
               <h3 class="card__title">Growing Business</h3>
               <p class="card__subtitle">Приложение</p>
